[tool.poetry]
name = "wpy"
version = "0.7.0"
description = "a library for python Developer"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
xmltodict = "^0.12.0"
PyYAML = "^6.0"
termcolor = "^1.1.0"
w3lib = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
