[tool.poetry]
name = "wpy"
version = "0.7.5"
description = "a library for python Developer"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
wpy="wpy.cli.shell:main"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.7"
pydantic = "^2.10.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
